--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1132,11 +1132,11 @@ odbc.allow_persistent = On
 
 ; Check that a connection is still valid before reuse.
 ; http://php.net/odbc.check-persistent
-odbc.check_persistent = On
+odbc.check_persistent = Off
 
 ; Maximum number of persistent links.  -1 means no limit.
 ; http://php.net/odbc.max-persistent
-odbc.max_persistent = -1
+odbc.max_persistent = 3
 
 ; Maximum number of links (persistent + non-persistent).  -1 means no limit.
 ; http://php.net/odbc.max-links
