--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1132,15 +1132,15 @@ odbc.allow_persistent = On
 
 ; Check that a connection is still valid before reuse.
 ; http://php.net/odbc.check-persistent
-odbc.check_persistent = Off
+odbc.check_persistent = On
 
 ; Maximum number of persistent links.  -1 means no limit.
 ; http://php.net/odbc.max-persistent
-odbc.max_persistent = 2
+odbc.max_persistent = -1
 
 ; Maximum number of links (persistent + non-persistent).  -1 means no limit.
 ; http://php.net/odbc.max-links
-odbc.max_links = 3
+odbc.max_links = -1
 
 ; Handling of LONG fields.  Returns number of bytes to variables.  0 means
 ; passthru.
