--- a/conf/php.ini
+++ b/conf/php.ini
@@ -1051,7 +1051,7 @@ date.timezone = UTC
 [Pdo]
 ; Whether to pool ODBC connections. Can be one of "strict", "relaxed" or "off"
 ; http://php.net/pdo-odbc.connection-pooling
-pdo_odbc.connection_pooling=relaxed
+;pdo_odbc.connection_pooling=strict
 
 ;pdo_odbc.db2_instance_name
 
